<?xml version="1.0"?>
<package>
  <name>h500_description</name>
  <version>2.0.0</version>
  <description>Hada autonomous sprayer robot description package</description>

  <maintainer email="hjw@hada-korea.com">Jongwoo Ha</maintainer>
  <license>BSD</license>
  
  <author email="sod@hada-korea.com">sod</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>
  
</package>
